--- a/unityplatform-micromessagepush/messagepush-domain/pom.xml
+++ b/unityplatform-micromessagepush/messagepush-domain/pom.xml
@@ -25,9 +25,22 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
         </dependency>
+        <!--mysql-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.version}</version>
+        </dependency>
+        <!--druid连接池-->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
+            <version>${druid.version}</version>
+        </dependency>
+        <!--引入core模块-->
+        <dependency>
+            <groupId>com.zhikuntech.intellimonitor</groupId>
+            <artifactId>core-commons</artifactId>
         </dependency>
 
     </dependencies>
