--- a/unityplatform-microfanscada/pom.xml
+++ b/unityplatform-microfanscada/pom.xml
@@ -27,6 +27,16 @@
                 <artifactId>fanscada-domain</artifactId>
                 <version>${intelli-monitor.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.zhikuntech.intellimonitor</groupId>
+                <artifactId>fanscada-facade</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>com.zhikuntech.intellimonitor</groupId>
+                <artifactId>fanscada-prototype</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
