--- a/unityplatform-micromainpage/mainpage-app/src/main/resources/application-dev.yml
+++ b/unityplatform-micromainpage/mainpage-app/src/main/resources/application-dev.yml
@@ -10,9 +10,9 @@ spring:
     host: 192.168.3.179
     port: 6379
 
-mybatis-plus:
-  mapper-locations: classpath:mapper/*.xml
-  type-aliases-package: com.zhikuntech.intellimonitor.messagepush.domain.pojo.*
+mybatis:
+  mapper-locations: classpath:mapper/**/*.xml
+  type-aliases-package: com.zhikuntech.intellimonitor.mainpage.domain.model.*,com.zhikuntech.intellimonitor.mainpage.domain.po.*
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
     map-underscore-to-camel-case: true
@@ -20,6 +20,7 @@ mybatis-plus:
 logging:
   level:
     com.zhikuntech.intellimonitor.mainpage.domain.mapper: debug
+
 
 
 eureka:
