--- a/unityplatform-micromessagepush/messagepush-app/src/main/resources/application-dev.yml
+++ b/unityplatform-micromessagepush/messagepush-app/src/main/resources/application-dev.yml
@@ -1,12 +1,11 @@
 
-
 spring:
   datasource:
     url: jdbc:mysql://192.168.3.171:3306/monitor_sys?useUnicode=true&serverTimezone=Asia/Shanghai&characterEncoding=UTF-8&useSSL=false
     username: develop
     password: Aman@2020
     type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: com
   redis:
     database: 7
     host: 192.168.3.179
