--- a/unityplatform-micromessagepush/messagepush-app/src/main/resources/application-local.yml
+++ b/unityplatform-micromessagepush/messagepush-app/src/main/resources/application-local.yml
@@ -10,8 +10,8 @@ spring:
     host: 192.168.3.179
     port: 6379
 
-mybatis:
-  mapper-locations: classpath:com.zhikuntech.intellimonitor.fanscada.domain.mapper/**/*.xml
+mybatis-plus:
+  mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.zhikuntech.intellimonitor.fanscada.domain.pojo.*
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
