--- a/unityplatform-micromessagepush/messagepush-app/src/main/resources/application-local.yml
+++ b/unityplatform-micromessagepush/messagepush-app/src/main/resources/application-local.yml
@@ -12,7 +12,7 @@ spring:
 
 mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
-  type-aliases-package: com.zhikuntech.intellimonitor.fanscada.domain.pojo.*
+  type-aliases-package: com.zhikuntech.intellimonitor.messagepush.domain.pojo.*
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
     map-underscore-to-camel-case: true
