--- a/unityplatform-microstructuremonitor/structuremonitor-app/src/main/resources/application-dev.yml
+++ b/unityplatform-microstructuremonitor/structuremonitor-app/src/main/resources/application-dev.yml
@@ -14,7 +14,7 @@ spring:
 
 mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
-  type-aliases-package: com.zhikuntech.intellimonitor.messagepush.domain.pojo.*
+  type-aliases-package: com.zhikuntech.intellimonitor.structuremonitor.domain.pojo.*
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
     map-underscore-to-camel-case: true
