--- a/unityplatform-microstructuremonitor/structuremonitor-app/src/main/resources/application-local.yml
+++ b/unityplatform-microstructuremonitor/structuremonitor-app/src/main/resources/application-local.yml
@@ -1,20 +1,18 @@
-
 spring:
   datasource:
-    url: jdbc:mysql://192.168.3.171:3306/monitor_sys?useUnicode=true&serverTimezone=Asia/Shanghai&characterEncoding=UTF-8&useSSL=false
-    username: develop
-    password: Aman@2020
+    url: jdbc:mysql://127.0.0.1:3306/monitor-unityplatform?useUnicode=true&serverTimezone=Asia/Shanghai&characterEncoding=UTF-8&useSSL=false
+    username: root
+    password: 123456
     type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com
+    driver-class-name: com.mysql.cj.jdbc.Driver
   redis:
     database: 7
     host: 192.168.3.179
     port: 6379
 
-
 mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
-  type-aliases-package: com.zhikuntech.intellimonitor.messagepush.domain.pojo.*
+  type-aliases-package: com.zhikuntech.intellimonitor.structuremonitor.domain.pojo.*
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
     map-underscore-to-camel-case: true
@@ -40,5 +38,3 @@ golden:
   password: golden
   poolSize: 25
   maxSize: 50
-
-
