--- a/unityplatform-microstructuremonitor/structuremonitor-app/src/main/resources/application.yml
+++ b/unityplatform-microstructuremonitor/structuremonitor-app/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 server:
-  port: 9002
+  port: 9003
 
 spring:
   application:
-    name: messagepush-app
+    name: structuremonitor-app
   profiles:
     active: dev
