--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
                 <artifactId>core-commons</artifactId>
                 <version>${intelli-monitor.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.zhikuntech.intellimonitor</groupId>
+                <artifactId>core-stream</artifactId>
+                <version>${intelli-monitor.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
