--- a/unityplatform-core/core-prototype/pom.xml
+++ b/unityplatform-core/core-prototype/pom.xml
@@ -3,20 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>intelli-monitor-unityplatform</artifactId>
+        <artifactId>unityplatform-core</artifactId>
         <groupId>com.zhikuntech.intellimonitor</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>unityplatform-core</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>core-commons</module>
-        <module>core-adapter</module>
-        <module>core-stream</module>
-        <module>core-prototype</module>
-    </modules>
+    <artifactId>core-prototype</artifactId>
 
 
 </project>
