--- a/intelli-monitor-parent/pom.xml
+++ b/intelli-monitor-parent/pom.xml
@@ -47,6 +47,7 @@
         <redisson.version>3.13.6</redisson.version>
         <persistence-api.version>1.0</persistence-api.version>
         <caffeine.version>2.8.8</caffeine.version>
+        <ext-kafka-clients.version>2.6.2</ext-kafka-clients.version>
     </properties>
 
     <!-- 管理所有外部依赖 -->
@@ -191,6 +192,12 @@
                 <groupId>org.springframework.kafka</groupId>
                 <artifactId>spring-kafka</artifactId>
                 <version>2.6.8</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.kafka</groupId>
+                <artifactId>kafka-clients</artifactId>
+                <version>${ext-kafka-clients.version}</version>
             </dependency>
 
             <!--   scope-test         -->
