--- a/unityplatform-microalarm/alarm-app/pom.xml
+++ b/unityplatform-microalarm/alarm-app/pom.xml
@@ -22,6 +22,12 @@
             <groupId>com.zhikuntech.intellimonitor</groupId>
             <artifactId>alarm-domain</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
