--- a/unityplatform-microalarm/alarm-domain/pom.xml
+++ b/unityplatform-microalarm/alarm-domain/pom.xml
@@ -48,11 +48,12 @@
             <artifactId>freemarker</artifactId>
         </dependency>
 
-        <!--  kafka 2.6+  -->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.kafka</groupId>-->
-<!--            <artifactId>spring-kafka</artifactId>-->
-<!--        </dependency>-->
+        <!-- spring data redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
 
     </dependencies>
 
