--- a/unityplatform-microalarm/alarm-app/src/main/resources/application-local.yml
+++ b/unityplatform-microalarm/alarm-app/src/main/resources/application-local.yml
@@ -16,6 +16,11 @@ spring:
     username: develop
     password: Aman@2020
     driver-class-name: com.mysql.cj.jdbc.Driver
+  redis:
+    host: 192.168.3.179
+    database: 8
+    port: 6379
+
 
 logging:
   level:
