--- a/unityplatform-microalarm/alarm-app/src/main/resources/application-dev.yml
+++ b/unityplatform-microalarm/alarm-app/src/main/resources/application-dev.yml
@@ -34,6 +34,6 @@ spring:
 
 logging:
   level:
-    com.zhikuntech.intellimonitor.windpowerforecast.domain.service: debug
-    com.zhikuntech.intellimonitor.windpowerforecast.domain.mapper: debug
+    com.zhikuntech.intellimonitor.alarm.domain.service: debug
+    com.zhikuntech.intellimonitor.alarm.domain.mapper: debug
 
