golden数据添加kafka推送

--- a/unityplatform-micromainpage/mainpage-domain/pom.xml
+++ b/unityplatform-micromainpage/mainpage-domain/pom.xml
@@ -75,6 +75,10 @@
         </dependency>
         <dependency>
             <groupId>com.zhikuntech.intellimonitor</groupId>
+            <artifactId>core-stream</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.zhikuntech.intellimonitor</groupId>
             <artifactId>windpowerforecast-facade</artifactId>
         </dependency>
     </dependencies>
