--- a/unityplatform-core/core-stream/pom.xml
+++ b/unityplatform-core/core-stream/pom.xml
@@ -21,7 +21,11 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>com.golden</groupId>
+            <artifactId>golden-java-sdk</artifactId>
+            <version>${golden.version}</version>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
