--- a/unityplatform-core/core-commons/pom.xml
+++ b/unityplatform-core/core-commons/pom.xml
@@ -102,5 +102,10 @@
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct-processor</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
 </project>
