--- a/unityplatform-microonlinemonitor/pom.xml
+++ b/unityplatform-microonlinemonitor/pom.xml
@@ -19,5 +19,23 @@
         <module>onlinemonitor-prototype</module>
     </modules>
 
-
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.zhikuntech.intellimonitor</groupId>
+                <artifactId>onlinemonitor-data</artifactId>
+                <version>${intelli-monitor.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.zhikuntech.intellimonitor</groupId>
+                <artifactId>onlinemonitor-domain</artifactId>
+                <version>${intelli-monitor.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.zhikuntech.intellimonitor</groupId>
+                <artifactId>onlinemonitor-prototype</artifactId>
+                <version>${intelli-monitor.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
