--- a/unityplatform-micromessagepush/messagepush-app/src/main/resources/application-dev.yml
+++ b/unityplatform-micromessagepush/messagepush-app/src/main/resources/application-dev.yml
@@ -5,11 +5,21 @@ spring:
     username: develop
     password: Aman@2020
     type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com
+    driver-class-name: com.mysql.cj.jdbc.Driver
   redis:
     database: 7
     host: 192.168.3.179
     port: 6379
+  kafka:
+    bootstrap-servers: 192.168.3.237:9092
+    producer:
+      retries: 10
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+    consumer:
+      group-id: test-hello-group
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
 
 
 mybatis-plus:
@@ -19,9 +29,9 @@ mybatis-plus:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
     map-underscore-to-camel-case: true
 
-logging:
-  level:
-    com.zhikuntech.intellimonitor.fanscada.domain.mapper: debug
+#logging:
+#  level:
+#    com.zhikuntech.intellimonitor.messagepush.domain.mapper: debug
 
 
 
