--- a/unityplatform-microstructuremonitor/structuremonitor-domain/pom.xml
+++ b/unityplatform-microstructuremonitor/structuremonitor-domain/pom.xml
@@ -52,6 +52,11 @@
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>5.2.1</version>
+        </dependency>
 
     </dependencies>
 
