refactor 重构类-移动至prototype

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
             </dependency>
             <dependency>
                 <groupId>com.zhikuntech.intellimonitor</groupId>
+                <artifactId>core-prototype</artifactId>
+                <version>${intelli-monitor.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.zhikuntech.intellimonitor</groupId>
                 <artifactId>core-stream</artifactId>
                 <version>${intelli-monitor.version}</version>
             </dependency>
