--- a/unityplatform-core/core-commons/pom.xml
+++ b/unityplatform-core/core-commons/pom.xml
@@ -12,6 +12,12 @@
     <artifactId>core-commons</artifactId>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.zhikuntech.intellimonitor</groupId>
+            <artifactId>core-prototype</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
