--- a/unityplatform-core/core-stream/pom.xml
+++ b/unityplatform-core/core-stream/pom.xml
@@ -18,6 +18,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.zhikuntech.intellimonitor</groupId>
+            <artifactId>core-prototype</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
