结构检测数据获取()

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <module>unityplatform-micromessagepush</module>
         <module>unityplatform-microstructuremonitor</module>
         <module>unityplatform-microonlinemonitor</module>
+        <module>unityplatform-microstructuredata</module>
     </modules>
 
     <properties>
