--- a/unityplatform-microstructuremonitor/structuremonitor-domain/pom.xml
+++ b/unityplatform-microstructuremonitor/structuremonitor-domain/pom.xml
@@ -57,6 +57,16 @@
             <artifactId>pagehelper</artifactId>
             <version>5.2.1</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.github.houbb</groupId>-->
+<!--            <artifactId>jdbc-sqlserver</artifactId>-->
+<!--            <version>0.0.1</version>-->
+<!--        </dependency>-->
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>9.2.1.jre8</version>
+        </dependency>
 
     </dependencies>
 
