海缆监测模块

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>unityplatform-microstructuremonitor</module>
         <module>unityplatform-microonlinemonitor</module>
         <module>unityplatform-microstructuredata</module>
+        <module>unityplatform-microcable</module>
     </modules>
 
     <properties>
