--- a/unityplatform-micromessagepush/messagepush-domain/pom.xml
+++ b/unityplatform-micromessagepush/messagepush-domain/pom.xml
@@ -60,6 +60,10 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.zhikuntech.intellimonitor</groupId>
+            <artifactId>messagepush-prototype</artifactId>
+        </dependency>
 
     </dependencies>
 
