--- a/unityplatform-microalarm/alarm-domain/pom.xml
+++ b/unityplatform-microalarm/alarm-domain/pom.xml
@@ -59,6 +59,12 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
+        <!--  caffeine缓存  -->
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
