--- a/unityplatform-microalarm/alarm-app/src/main/resources/application-dev.yml
+++ b/unityplatform-microalarm/alarm-app/src/main/resources/application-dev.yml
@@ -37,3 +37,10 @@ logging:
     com.zhikuntech.intellimonitor.alarm.domain.service: debug
     com.zhikuntech.intellimonitor.alarm.domain.mapper: debug
 
+golden:
+  ip: 1.117.33.103
+  port: 6327
+  user: sa
+  password: golden
+  poolSize: 25
+  maxSize: 50
