添加综自模块

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>unityplatform-microonlinemonitor</module>
         <module>unityplatform-microstructuredata</module>
         <module>unityplatform-microcable</module>
+        <module>unityplatform-microintegratedautomation</module>
     </modules>
 
     <properties>
