--- a/unityplatform-microwindpowerforecast/windpowerforecast-app/pom.xml
+++ b/unityplatform-microwindpowerforecast/windpowerforecast-app/pom.xml
@@ -41,6 +41,14 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
