--- a/unityplatform-microintegratedautomation/integratedautomation-app/src/main/resources/application-local.yml
+++ b/unityplatform-microintegratedautomation/integratedautomation-app/src/main/resources/application-local.yml
@@ -19,7 +19,7 @@ eureka:
     instance-id: ${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}
 
 golden:
-  ip: 1.117.33.103
+  ip: 192.168.3.165
   port: 6327
   user: sa
   password: golden
@@ -30,4 +30,4 @@ ribbon:
   ConnectTimeout: 5000
   ReadTimeout: 5000
 
-websocket.config: true
+websocket.config: false
