--- a/unityplatform-microintegratedautomation/integratedautomation-domain/pom.xml
+++ b/unityplatform-microintegratedautomation/integratedautomation-domain/pom.xml
@@ -40,6 +40,16 @@
             <artifactId>knife4j-spring-boot-starter</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>${mybatis-plus.version}</version>
+        </dependency>
+
         <!--引入core模块-->
         <dependency>
             <groupId>com.zhikuntech.intellimonitor</groupId>
